# LoRaCore

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: LoRaUsbAdapter_E22_400T22U.cpp  LoRaUsbAdapter_E22_400T22U.hpp  LoRaWorker.cpp  LoRaWorker.hpp
tests/: LoRaUsbAdapterTests.cpp  LoRaWorkerTests.cpp  main.cpp
